# date-assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: code_quality.yml  tests.yml
date_assistant/: __init__.py  classes.py  core.py  date_formats.py  formats.py  utils.py
docs/: requirements.txt
docs/source/: class_approach.rst  conf.py  functions_approach.rst  index.rst  usage.rst
tests/: conftest.py  test_date_assistant.py  test_years.py
tests/classes/: test_date_assistant.py  test_days.py  test_months.py  test_years.py
tests/utils/: test_utils.py
