[tool.poetry]
name = "date_assistant"
version = "0.11.2"
description = "🗓 Classes and functions with intuitive names for common dates operations"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jalvaradosegura/date-assistant"
repository = "https://github.com/jalvaradosegura/date-assistant"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
coveralls = "^3.2.0"
Sphinx = "^4.1.2"
furo = "^2021.8.17-beta.43"
pre-commit = "^2.17.0"
tox = "^3.24.5"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
